--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.125",
-    "@mui/material": "^5.11.11",
+    "@mui/material": "^5.17.1",
     "@mui/styled-engine-sc": "^5.11.11",
     "@mui/system": "^5.11.11",
     "@mui/x-data-grid": "^6.0.0",
@@ -17,15 +15,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "apexcharts": "^3.37.1",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "ethers": "^5.7.2",
     "html5-qrcode": "^2.3.8",
     "qrcode.react": "^3.1.0",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11",
